--- a/src/map.ipynb
+++ b/src/map.ipynb
@@ -103,8 +103,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/l3/_ymtxc09315_4jphjq8d1whr0000gn/T/ipykernel_36268/230686227.py:9: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  average_precision = np.sum(precision * is_relevant) / np.minimum(k, np.sum(is_relevant))\n"
+      "/var/folders/l3/_ymtxc09315_4jphjq8d1whr0000gn/T/ipykernel_36328/668764004.py:9: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "  average_precision = np.sum(precision * is_relevant) / np.minimum(depth, np.sum(is_relevant))\n"
      ]
     }
    ],
