--- a/src/map.ipynb
+++ b/src/map.ipynb
@@ -166,23 +166,23 @@
     "\n",
     "# Calculate the overall MAP by topic\n",
     "overall_ap_5_by_topic = ap_5_results_df.mean(axis=1)\n",
-    "ap_5_results_df['Overall (Topic)'] = overall_ap_5_by_topic\n",
+    "ap_5_results_df['MAP (Topic)'] = overall_ap_5_by_topic\n",
     "\n",
     "overall_ap_10_by_topic = ap_10_results_df.mean(axis=1)\n",
-    "ap_10_results_df['Overall (Topic)'] = overall_ap_10_by_topic\n",
+    "ap_10_results_df['MAP (Topic)'] = overall_ap_10_by_topic\n",
     "\n",
     "overall_ap_20_by_topic = ap_20_results_df.mean(axis=1)\n",
-    "ap_20_results_df['Overall (Topic)'] = overall_ap_20_by_topic\n",
+    "ap_20_results_df['MAP (Topic)'] = overall_ap_20_by_topic\n",
     "\n",
     "# Calculate the overall MAP by system\n",
     "overall_ap_5_by_system = ap_5_results_df.mean(axis=0)\n",
-    "ap_5_results_df.loc[\"Overall (System)\"] = overall_ap_5_by_system\n",
+    "ap_5_results_df.loc[\"MAP (System)\"] = overall_ap_5_by_system\n",
     "\n",
     "overall_ap_10_by_system = ap_10_results_df.mean(axis=0)\n",
-    "ap_10_results_df.loc[\"Overall (System)\"] = overall_ap_10_by_system\n",
+    "ap_10_results_df.loc[\"MAP (System)\"] = overall_ap_10_by_system\n",
     "\n",
     "overall_ap_20_by_system = ap_20_results_df.mean(axis=0)\n",
-    "ap_20_results_df.loc[\"Overall (System)\"] = overall_ap_20_by_system\n",
+    "ap_20_results_df.loc[\"MAP (System)\"] = overall_ap_20_by_system\n",
     "\n",
     "# Store\n",
     "ap_5_results_df.to_csv('../outputs/map@5.csv')\n",
