--- a/src/significanceTesting.ipynb
+++ b/src/significanceTesting.ipynb
@@ -10,20 +10,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (2.0.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from pandas) (2023.3)\n",
-      "Requirement already satisfied: tzdata>=2022.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from pandas) (2023.3)\n",
-      "Requirement already satisfied: numpy>=1.21.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from pandas) (1.24.3)\n",
-      "Requirement already satisfied: six>=1.5 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Requirement already satisfied: pandas in /opt/homebrew/lib/python3.10/site-packages (2.0.1)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in /opt/homebrew/lib/python3.10/site-packages (from pandas) (1.24.3)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /opt/homebrew/lib/python3.10/site-packages (from pandas) (2023.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/homebrew/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: tzdata>=2022.1 in /opt/homebrew/lib/python3.10/site-packages (from pandas) (2023.3)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/homebrew/lib/python3.10/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
       "\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.1.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3 install --upgrade pip\u001b[0m\n",
-      "Requirement already satisfied: scipy in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (1.10.1)\n",
-      "Requirement already satisfied: numpy<1.27.0,>=1.19.5 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from scipy) (1.24.3)\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3.10 -m pip install --upgrade pip\u001b[0m\n",
+      "Requirement already satisfied: scipy in /opt/homebrew/lib/python3.10/site-packages (1.10.1)\n",
+      "Requirement already satisfied: numpy<1.27.0,>=1.19.5 in /opt/homebrew/lib/python3.10/site-packages (from scipy) (1.24.3)\n",
       "\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.1.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3 install --upgrade pip\u001b[0m\n"
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3.10 -m pip install --upgrade pip\u001b[0m\n"
      ]
     }
    ],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "14de47e4",
    "metadata": {},
    "outputs": [
@@ -79,9 +79,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Depth 5: Number of significant differences = 90 out of 210 system comparisons\n",
-      "Depth 10: Number of significant differences = 88 out of 210 system comparisons\n",
-      "Depth 20: Number of significant differences = 86 out of 210 system comparisons\n"
+      "Depth 5: Number of significant differences = 45 out of 105 system comparisons\n",
+      "Depth 10: Number of significant differences = 44 out of 105 system comparisons\n",
+      "Depth 20: Number of significant differences = 43 out of 105 system comparisons\n"
      ]
     }
    ],
@@ -99,24 +99,27 @@
     "    significant_results = [[None] * num_columns for _ in range(num_columns)]\n",
     "    significant_count = 0  # Counter for significant differences\n",
     "\n",
-    "    \n",
-    "    # Calculate the total number of system comparisons\n",
-    "    total_comparisons = num_columns * (num_columns - 1)\n",
-    "\n",
     "    for i in range(num_columns):\n",
     "        col1 = columns[i]\n",
     "\n",
     "        # Compare col1 with every other column\n",
-    "        for j in range(num_columns):\n",
+    "        for j in range(i, num_columns):\n",
+    "            col2 = columns[j]\n",
+    "            \n",
     "            if i == j:  # Skip self-comparisons\n",
     "                significant_results[i][j] = (None, None)\n",
     "            else:\n",
-    "                t_statistic, p_value = ttest_ind(df.iloc[:, i], df.iloc[:, j])\n",
+    "                t_statistic, p_value = ttest_ind(df[col1], df[col2])\n",
     "                is_significant_different = p_value <= significance_level\n",
     "                significant_results[i][j] = (p_value, is_significant_different)\n",
-    "\n",
+    "#                 significant_results[j][i] = (p_value, is_significant_different)  # Store the result in the reverse position as well\n",
+    "                \n",
     "                if is_significant_different:\n",
     "                    significant_count += 1\n",
+    "\n",
+    "                \n",
+    "    # Calculate the total number of system comparisons (excluding same system comparison and reverse comparison)\n",
+    "    total_comparisons = (num_columns * (num_columns - 1)) // 2\n",
     "\n",
     "    # Create a DataFrame with the results\n",
     "    significant_df = pd.DataFrame(significant_results, index=system_name_list, columns=system_name_list)\n",
@@ -146,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
