--- a/src/significanceTesting.ipynb
+++ b/src/significanceTesting.ipynb
@@ -13,8 +13,8 @@
       "Requirement already satisfied: pandas in /opt/homebrew/lib/python3.10/site-packages (2.0.1)\n",
       "Requirement already satisfied: numpy>=1.21.0 in /opt/homebrew/lib/python3.10/site-packages (from pandas) (1.24.3)\n",
       "Requirement already satisfied: pytz>=2020.1 in /opt/homebrew/lib/python3.10/site-packages (from pandas) (2023.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/homebrew/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
       "Requirement already satisfied: tzdata>=2022.1 in /opt/homebrew/lib/python3.10/site-packages (from pandas) (2023.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/homebrew/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
       "Requirement already satisfied: six>=1.5 in /opt/homebrew/lib/python3.10/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
       "\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.1.2\u001b[0m\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "14de47e4",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
     "                t_statistic, p_value = ttest_ind(df[col1], df[col2])\n",
     "                is_significant_different = p_value <= significance_level\n",
     "                significant_results[i][j] = (p_value, is_significant_different)\n",
-    "#                 significant_results[j][i] = (p_value, is_significant_different)  # Store the result in the reverse position as well\n",
+    "                significant_results[j][i] = (p_value, is_significant_different)  # Store the result in the reverse position as well\n",
     "                \n",
     "                if is_significant_different:\n",
     "                    significant_count += 1\n",
