update src test

--- a/src/significanceTesting.ipynb
+++ b/src/significanceTesting.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "14de47e4",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
     "                t_statistic, p_value = ttest_ind(df[col1], df[col2])\n",
     "                is_significant_different = p_value <= significance_level\n",
     "                significant_results[i][j] = (p_value, is_significant_different)\n",
-    "                significant_results[j][i] = (p_value, is_significant_different)  # Store the result in the reverse position as well\n",
+    "                significant_results[j][i] = (None, None)\n",
     "                \n",
     "                if is_significant_different:\n",
     "                    significant_count += 1\n",
