--- a/src/correlationCoefficient.ipynb
+++ b/src/correlationCoefficient.ipynb
@@ -59,9 +59,9 @@
    "source": [
     "# Filtering\n",
     "\n",
-    "top_precision_5_system_scores = top_precision_10_df.iloc[-1, 1:].values.astype(float)\n",
+    "top_precision_5_system_scores = top_precision_5_df.iloc[-1, 1:].values.astype(float)\n",
     "top_precision_10_system_scores = top_precision_10_df.iloc[-1, 1:].values.astype(float)\n",
-    "top_precision_20_system_scores = top_precision_10_df.iloc[-1, 1:].values.astype(float)\n",
+    "top_precision_20_system_scores = top_precision_20_df.iloc[-1, 1:].values.astype(float)\n",
     "\n",
     "map_with_depth_5_system_scores = map_depth_with_5_df.iloc[-1, 1:].values.astype(float)\n",
     "map_with_depth_10_system_scores = map_depth_with_10_df.iloc[-1, 1:].values.astype(float)\n",
@@ -85,16 +85,18 @@
       "\n",
       "Top Precision: 5\n",
       "Map Depth: 5\n",
-      "Correlation Coefficient: 0.98\n",
+      "Correlation Coefficient: 0.99\n",
       "-----\n",
       "Top Precision: 5\n",
       "Map Depth: 10\n",
       "Correlation Coefficient: 0.99\n",
       "-----\n",
       "Top Precision: 5\n",
-      "Map Depth: 15\n",
+      "Map Depth: 20\n",
       "Correlation Coefficient: 1.00\n",
       "-----\n",
+      "\n",
+      "\n",
       "Top Precision: 10\n",
       "Map Depth: 5\n",
       "Correlation Coefficient: 0.98\n",
@@ -104,21 +106,25 @@
       "Correlation Coefficient: 0.99\n",
       "-----\n",
       "Top Precision: 10\n",
-      "Map Depth: 15\n",
+      "Map Depth: 20\n",
       "Correlation Coefficient: 1.00\n",
       "-----\n",
-      "Top Precision: 15\n",
+      "\n",
+      "\n",
+      "Top Precision: 20\n",
       "Map Depth: 5\n",
+      "Correlation Coefficient: 0.97\n",
+      "-----\n",
+      "Top Precision: 20\n",
+      "Map Depth: 10\n",
       "Correlation Coefficient: 0.98\n",
       "-----\n",
-      "Top Precision: 15\n",
-      "Map Depth: 10\n",
+      "Top Precision: 20\n",
+      "Map Depth: 20\n",
       "Correlation Coefficient: 0.99\n",
       "-----\n",
-      "Top Precision: 15\n",
-      "Map Depth: 15\n",
-      "Correlation Coefficient: 1.00\n",
-      "-----\n"
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -133,14 +139,15 @@
     "print(\"A value close to 0 indicates a weak or no correlation between the two variables.\\n\\n\")\n",
     "\n",
     "for i, top_precision_scores_arr in enumerate(top_precision_scores):\n",
+    "    top_precision = (i + 1) * 5 if (i + 1) < 3 else 20  # Adjust the calculation for top_precision\n",
     "    for j, map_with_depth_scores_arr in enumerate(map_with_depth_scores):\n",
-    "        top_precision = (i + 1) * 5\n",
-    "        map_depth = (j + 1) * 5\n",
+    "        map_depth = (j + 1) * 5 if (j + 1) < 3 else 20  # Adjust the calculation for map_depth\n",
     "        print(\"Top Precision: {}\".format(top_precision))\n",
     "        print(\"Map Depth: {}\".format(map_depth))\n",
     "        correlation_coefficient = np.corrcoef(top_precision_scores_arr, map_with_depth_scores_arr)[0, 1]\n",
     "        print(\"Correlation Coefficient: {:.2f}\".format(correlation_coefficient))\n",
-    "        print(\"-----\")\n"
+    "        print(\"-----\")\n",
+    "    print(\"\\n\")\n"
    ]
   }
  ],
