use top precision 10 and 100, ap 100

--- a/src/map.ipynb
+++ b/src/map.ipynb
@@ -103,16 +103,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/l3/_ymtxc09315_4jphjq8d1whr0000gn/T/ipykernel_47419/668764004.py:9: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "/var/folders/l3/_ymtxc09315_4jphjq8d1whr0000gn/T/ipykernel_48837/2122712197.py:7: RuntimeWarning: invalid value encountered in scalar divide\n",
       "  average_precision = np.sum(precision * is_relevant) / np.minimum(depth, np.sum(is_relevant))\n"
      ]
     }
    ],
    "source": [
     "# MAP Calculation\n",
-    "ap_depth_5 = []\n",
-    "ap_depth_10 = []\n",
-    "ap_depth_20 = []\n",
+    "ap_depth_100 = []\n",
     "\n",
     "def average_precision_at_k(x, depth):\n",
     "    is_relevant = x['is_relevant'].head(depth) == 1\n",
@@ -125,14 +123,8 @@
     "    grouped = df.groupby('query_id')\n",
     "\n",
     "    # calculate average precision\n",
-    "    avg_precisions_5 = grouped.apply(lambda x: average_precision_at_k(x, 5))\n",
-    "    ap_depth_5.append(avg_precisions_5)\n",
-    "    \n",
-    "    avg_precisions_10 = grouped.apply(lambda x: average_precision_at_k(x, 10))\n",
-    "    ap_depth_10.append(avg_precisions_10)\n",
-    "    \n",
-    "    avg_precisions_20 = grouped.apply(lambda x: average_precision_at_k(x, 20))\n",
-    "    ap_depth_20.append(avg_precisions_20)"
+    "    avg_precisions_100 = grouped.apply(lambda x: average_precision_at_k(x, 100))\n",
+    "    ap_depth_100.append(avg_precisions_100)"
    ]
   },
   {
@@ -145,14 +137,8 @@
     "# Define system name\n",
     "column_names = [df['system_name'].iloc[0] for df in merged_df]\n",
     "\n",
-    "ap_5_results_df = pd.concat([pd.DataFrame(ap_depth_5).T],  axis=1)\n",
-    "ap_5_results_df.columns = [name for i, name in enumerate(column_names)]\n",
-    "\n",
-    "ap_10_results_df = pd.concat([pd.DataFrame(ap_depth_10).T],  axis=1)\n",
-    "ap_10_results_df.columns = [name for i, name in enumerate(column_names)]\n",
-    "\n",
-    "ap_20_results_df = pd.concat([pd.DataFrame(ap_depth_20).T],  axis=1)\n",
-    "ap_20_results_df.columns = [name for i, name in enumerate(column_names)]"
+    "ap_100_results_df = pd.concat([pd.DataFrame(ap_depth_100).T],  axis=1)\n",
+    "ap_100_results_df.columns = [name for i, name in enumerate(column_names)]"
    ]
   },
   {
@@ -165,29 +151,15 @@
     "### Calculate overall value\n",
     "\n",
     "# Calculate the overall MAP by topic\n",
-    "overall_ap_5_by_topic = ap_5_results_df.mean(axis=1)\n",
-    "ap_5_results_df['MAP (Topic)'] = overall_ap_5_by_topic\n",
-    "\n",
-    "overall_ap_10_by_topic = ap_10_results_df.mean(axis=1)\n",
-    "ap_10_results_df['MAP (Topic)'] = overall_ap_10_by_topic\n",
-    "\n",
-    "overall_ap_20_by_topic = ap_20_results_df.mean(axis=1)\n",
-    "ap_20_results_df['MAP (Topic)'] = overall_ap_20_by_topic\n",
+    "overall_ap_100_by_topic = ap_100_results_df.mean(axis=1)\n",
+    "ap_100_results_df['MAP (Topic)'] = overall_ap_100_by_topic\n",
     "\n",
     "# Calculate the overall MAP by system\n",
-    "overall_ap_5_by_system = ap_5_results_df.mean(axis=0)\n",
-    "ap_5_results_df.loc[\"MAP (System)\"] = overall_ap_5_by_system\n",
-    "\n",
-    "overall_ap_10_by_system = ap_10_results_df.mean(axis=0)\n",
-    "ap_10_results_df.loc[\"MAP (System)\"] = overall_ap_10_by_system\n",
-    "\n",
-    "overall_ap_20_by_system = ap_20_results_df.mean(axis=0)\n",
-    "ap_20_results_df.loc[\"MAP (System)\"] = overall_ap_20_by_system\n",
+    "overall_ap_100_by_system = ap_100_results_df.mean(axis=0)\n",
+    "ap_100_results_df.loc[\"MAP (System)\"] = overall_ap_100_by_system\n",
     "\n",
     "# Store\n",
-    "ap_5_results_df.to_csv('../outputs/map@5.csv')\n",
-    "ap_10_results_df.to_csv('../outputs/map@10.csv')\n",
-    "ap_20_results_df.to_csv('../outputs/map@20.csv')"
+    "ap_100_results_df.to_csv('../outputs/map@100.csv')"
    ]
   }
  ],
