--- a/src/significanceTesting.ipynb
+++ b/src/significanceTesting.ipynb
@@ -11,10 +11,10 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pandas in /opt/homebrew/lib/python3.10/site-packages (2.0.1)\n",
-      "Requirement already satisfied: numpy>=1.21.0 in /opt/homebrew/lib/python3.10/site-packages (from pandas) (1.24.3)\n",
       "Requirement already satisfied: pytz>=2020.1 in /opt/homebrew/lib/python3.10/site-packages (from pandas) (2023.3)\n",
       "Requirement already satisfied: tzdata>=2022.1 in /opt/homebrew/lib/python3.10/site-packages (from pandas) (2023.3)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/homebrew/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: numpy>=1.21.0 in /opt/homebrew/lib/python3.10/site-packages (from pandas) (1.24.3)\n",
       "Requirement already satisfied: six>=1.5 in /opt/homebrew/lib/python3.10/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
       "\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.1.2\u001b[0m\n",
@@ -45,14 +45,14 @@
    "outputs": [],
    "source": [
     "# Read map .csv files\n",
-    "mapDepthWith5FilePath = '../outputs/map@5.csv'\n",
-    "map_depth_with_5_df = pd.read_csv(mapDepthWith5FilePath)\n",
+    "topPrecision10FilePath = '../outputs/topPrecision@10.csv'\n",
+    "top_precision_10_df = pd.read_csv(topPrecision10FilePath)\n",
     "\n",
-    "mapDepthWith10FilePath = '../outputs/map@10.csv'\n",
-    "map_depth_with_10_df = pd.read_csv(mapDepthWith10FilePath)\n",
+    "topPrecision100FilePath = '../outputs/topPrecision@100.csv'\n",
+    "top_precision_100_df = pd.read_csv(topPrecision100FilePath)\n",
     "\n",
-    "mapDepthWith20FilePath = '../outputs/map@20.csv'\n",
-    "map_depth_with_20_df = pd.read_csv(mapDepthWith20FilePath)"
+    "mapDepthWith100FilePath = '../outputs/map@100.csv'\n",
+    "map_depth_with_100_df = pd.read_csv(mapDepthWith100FilePath)"
    ]
   },
   {
@@ -64,14 +64,14 @@
    "source": [
     "# Filtering\n",
     "\n",
-    "aps_with_depth_5 = map_depth_with_5_df.iloc[0:-1, 1:-1]\n",
-    "aps_with_depth_10 = map_depth_with_10_df.iloc[0:-1, 1:-1]\n",
-    "aps_with_depth_20 = map_depth_with_20_df.iloc[0:-1, 1:-1]"
+    "top_precisions_10 = top_precision_10_df.iloc[0:-1, 1:-1]\n",
+    "top_precisions_100 = top_precision_100_df.iloc[0:-1, 1:-1]\n",
+    "aps_with_depth_100 = map_depth_with_100_df.iloc[0:-1, 1:-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "14de47e4",
    "metadata": {},
    "outputs": [
@@ -79,19 +79,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Depth 5: Number of significant differences = 45 out of 105 system comparisons\n",
-      "Depth 10: Number of significant differences = 44 out of 105 system comparisons\n",
-      "Depth 20: Number of significant differences = 43 out of 105 system comparisons\n"
+      "Top Precision@10: Number of significant differences = 40 out of 105 system comparisons\n",
+      "Top Precision@100: Number of significant differences = 38 out of 105 system comparisons\n",
+      "MAP@100: Number of significant differences = 42 out of 105 system comparisons\n"
      ]
     }
    ],
    "source": [
     "significance_level = 0.05\n",
-    "dfs = [aps_with_depth_5, aps_with_depth_10, aps_with_depth_20]\n",
-    "depth_values = [5, 10, 20]\n",
+    "dfs = [top_precisions_10, top_precisions_100, aps_with_depth_100]\n",
+    "df_names = [\"Top Precision@10\", \"Top Precision@100\", \"MAP@100\"]\n",
+    "output_file_names = [\"topPrecision@10\", \"topPrecision@100\", \"map@100\"]\n",
     "\n",
     "for i, df in enumerate(dfs):\n",
-    "    depth = depth_values[i]\n",
+    "    name = df_names[i]\n",
+    "    output_file_name = output_file_names[i]\n",
     "    \n",
     "    columns = df.columns\n",
     "    system_name_list = columns\n",
@@ -125,11 +127,11 @@
     "    significant_df = pd.DataFrame(significant_results, index=system_name_list, columns=system_name_list)\n",
     "\n",
     "    # Save the DataFrame to a CSV file\n",
-    "    output_file = f\"../outputs/test_map_depth_{depth}.csv\"\n",
+    "    output_file = f\"../outputs/significance_testing_{output_file_name}.csv\"\n",
     "    significant_df.to_csv(output_file)\n",
     "    \n",
     "    # Output the count of significant differences and total comparisons\n",
-    "    print(f\"Depth {depth}: Number of significant differences = {significant_count} out of {total_comparisons} system comparisons\")"
+    "    print(f\"{name}: Number of significant differences = {significant_count} out of {total_comparisons} system comparisons\")"
    ]
   }
  ],
