--- a/src/topPrecision.ipynb
+++ b/src/topPrecision.ipynb
@@ -101,9 +101,8 @@
    "outputs": [],
    "source": [
     "# Top Precision Calculation\n",
-    "top_5_precisions = []\n",
     "top_10_precisions = []\n",
-    "top_20_precisions = []\n",
+    "top_100_precisions = []\n",
     "\n",
     "def calculate_precision_k(x, k):\n",
     "    return np.sum(x['is_relevant'].head(k) == 1) / k\n",
@@ -112,14 +111,12 @@
     "    # group by query_id\n",
     "    grouped = df.groupby('query_id')\n",
     "\n",
-    "    # calculate precision for top 10\n",
-    "    precision_5 = grouped.apply(lambda x: calculate_precision_k(x, 5))\n",
+    "    # calculate precision for top 10 and top 100\n",
     "    precision_10 = grouped.apply(lambda x: calculate_precision_k(x, 10))\n",
-    "    precision_20 = grouped.apply(lambda x: calculate_precision_k(x, 20))\n",
+    "    precision_100 = grouped.apply(lambda x: calculate_precision_k(x, 100))\n",
     "\n",
-    "    top_5_precisions.append(precision_5)\n",
     "    top_10_precisions.append(precision_10)\n",
-    "    top_20_precisions.append(precision_20)\n"
+    "    top_100_precisions.append(precision_100)\n"
    ]
   },
   {
@@ -132,14 +129,11 @@
     "# Define system name\n",
     "column_names = [df['system_name'].iloc[0] for df in merged_df]\n",
     "\n",
-    "precision5_results_df = pd.concat([pd.DataFrame(top_5_precisions).T],  axis=1)\n",
-    "precision5_results_df.columns = [name for i, name in enumerate(column_names)]\n",
-    "\n",
     "precision10_results_df = pd.concat([pd.DataFrame(top_10_precisions).T],  axis=1)\n",
     "precision10_results_df.columns = [name for i, name in enumerate(column_names)]\n",
     "\n",
-    "precision20_results_df = pd.concat([pd.DataFrame(top_20_precisions).T],  axis=1)\n",
-    "precision20_results_df.columns = [name for i, name in enumerate(column_names)]"
+    "precision100_results_df = pd.concat([pd.DataFrame(top_100_precisions).T],  axis=1)\n",
+    "precision100_results_df.columns = [name for i, name in enumerate(column_names)]"
    ]
   },
   {
@@ -152,29 +146,22 @@
     "### Calculate overall value\n",
     "\n",
     "# Calculate the overall precision@10 by topic\n",
-    "overall_precision_by_topic_5 = precision5_results_df.mean(axis=1)\n",
-    "precision5_results_df['Overall (Topic)'] = overall_precision_by_topic_5\n",
-    "\n",
     "overall_precision_by_topic_10 = precision10_results_df.mean(axis=1)\n",
     "precision10_results_df['Overall (Topic)'] = overall_precision_by_topic_10\n",
     "\n",
-    "overall_precision_by_topic_20 = precision20_results_df.mean(axis=1)\n",
-    "precision20_results_df['Overall (Topic)'] = overall_precision_by_topic_20\n",
+    "overall_precision_by_topic_100 = precision100_results_df.mean(axis=1)\n",
+    "precision100_results_df['Overall (Topic)'] = overall_precision_by_topic_100\n",
     "\n",
     "# Calculate the overall precision@10 by system\n",
-    "overall_precision_by_system_5 = precision5_results_df.mean(axis=0)\n",
-    "precision5_results_df.loc[\"Overall (System)\"] = overall_precision_by_system_5\n",
-    "\n",
     "overall_precision_by_system_10 = precision10_results_df.mean(axis=0)\n",
     "precision10_results_df.loc[\"Overall (System)\"] = overall_precision_by_system_10\n",
     "\n",
-    "overall_precision_by_system_20 = precision20_results_df.mean(axis=0)\n",
-    "precision20_results_df.loc[\"Overall (System)\"] = overall_precision_by_system_20\n",
+    "overall_precision_by_system_100 = precision100_results_df.mean(axis=0)\n",
+    "precision100_results_df.loc[\"Overall (System)\"] = overall_precision_by_system_100\n",
     "\n",
     "# Store\n",
-    "precision5_results_df.to_csv('../outputs/topPrecision@5.csv')\n",
     "precision10_results_df.to_csv('../outputs/topPrecision@10.csv')\n",
-    "precision20_results_df.to_csv('../outputs/topPrecision@20.csv')"
+    "precision100_results_df.to_csv('../outputs/topPrecision@100.csv')"
    ]
   }
  ],
