--- a/src/correlationCoefficient.ipynb
+++ b/src/correlationCoefficient.ipynb
@@ -30,24 +30,15 @@
    "outputs": [],
    "source": [
     "# Read top precision .csv files\n",
-    "topPrecision5FilePath = '../outputs/topPrecision@5.csv'\n",
-    "top_precision_5_df = pd.read_csv(topPrecision5FilePath)\n",
-    "\n",
     "topPrecision10FilePath = '../outputs/topPrecision@10.csv'\n",
     "top_precision_10_df = pd.read_csv(topPrecision10FilePath)\n",
     "\n",
-    "topPrecision20FilePath = '../outputs/topPrecision@20.csv'\n",
-    "top_precision_20_df = pd.read_csv(topPrecision20FilePath)\n",
+    "topPrecision100FilePath = '../outputs/topPrecision@100.csv'\n",
+    "top_precision_100_df = pd.read_csv(topPrecision100FilePath)\n",
     "\n",
     "# Read map .csv files\n",
-    "mapDepthWith5FilePath = '../outputs/map@5.csv'\n",
-    "map_depth_with_5_df = pd.read_csv(mapDepthWith5FilePath)\n",
-    "\n",
-    "mapDepthWith10FilePath = '../outputs/map@10.csv'\n",
-    "map_depth_with_10_df = pd.read_csv(mapDepthWith10FilePath)\n",
-    "\n",
-    "mapDepthWith20FilePath = '../outputs/map@20.csv'\n",
-    "map_depth_with_20_df = pd.read_csv(mapDepthWith20FilePath)"
+    "mapDepthWith100FilePath = '../outputs/map@100.csv'\n",
+    "map_depth_with_100_df = pd.read_csv(mapDepthWith100FilePath)"
    ]
   },
   {
@@ -59,18 +50,15 @@
    "source": [
     "# Filtering\n",
     "\n",
-    "top_precision_5_system_scores = top_precision_5_df.iloc[-1, 1:].values.astype(float)\n",
     "top_precision_10_system_scores = top_precision_10_df.iloc[-1, 1:].values.astype(float)\n",
-    "top_precision_20_system_scores = top_precision_20_df.iloc[-1, 1:].values.astype(float)\n",
+    "top_precision_100_system_scores = top_precision_100_df.iloc[-1, 1:].values.astype(float)\n",
     "\n",
-    "map_with_depth_5_system_scores = map_depth_with_5_df.iloc[-1, 1:].values.astype(float)\n",
-    "map_with_depth_10_system_scores = map_depth_with_10_df.iloc[-1, 1:].values.astype(float)\n",
-    "map_with_depth_20_system_scores = map_depth_with_20_df.iloc[-1, 1:].values.astype(float)"
+    "map_with_depth_100_system_scores = map_depth_with_100_df.iloc[-1, 1:].values.astype(float)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "14de47e4",
    "metadata": {},
    "outputs": [
@@ -83,45 +71,21 @@
       "A value close to 0 indicates a weak or no correlation between the two variables.\n",
       "\n",
       "\n",
-      "Top Precision: 5\n",
-      "Map Depth: 5\n",
+      "Top Precision: 10\n",
+      "Map Depth: 100\n",
       "Correlation Coefficient: 0.99\n",
-      "-----\n",
-      "Top Precision: 5\n",
-      "Map Depth: 10\n",
-      "Correlation Coefficient: 0.99\n",
-      "-----\n",
-      "Top Precision: 5\n",
-      "Map Depth: 20\n",
-      "Correlation Coefficient: 1.00\n",
       "-----\n",
       "\n",
       "\n",
       "Top Precision: 10\n",
-      "Map Depth: 5\n",
-      "Correlation Coefficient: 0.98\n",
-      "-----\n",
-      "Top Precision: 10\n",
-      "Map Depth: 10\n",
+      "Top Precision: 100\n",
       "Correlation Coefficient: 0.99\n",
-      "-----\n",
-      "Top Precision: 10\n",
-      "Map Depth: 20\n",
-      "Correlation Coefficient: 1.00\n",
       "-----\n",
       "\n",
       "\n",
-      "Top Precision: 20\n",
-      "Map Depth: 5\n",
-      "Correlation Coefficient: 0.97\n",
-      "-----\n",
-      "Top Precision: 20\n",
-      "Map Depth: 10\n",
-      "Correlation Coefficient: 0.98\n",
-      "-----\n",
-      "Top Precision: 20\n",
-      "Map Depth: 20\n",
-      "Correlation Coefficient: 0.99\n",
+      "Map Depth: 100\n",
+      "Top Precision: 100\n",
+      "Correlation Coefficient: 0.96\n",
       "-----\n",
       "\n",
       "\n"
@@ -131,23 +95,33 @@
    "source": [
     "# Calculation\n",
     "\n",
-    "top_precision_scores = [top_precision_5_system_scores, top_precision_10_system_scores, top_precision_20_system_scores]\n",
-    "map_with_depth_scores = [map_with_depth_5_system_scores, map_with_depth_10_system_scores, map_with_depth_20_system_scores]\n",
+    "top_precision_scores = [top_precision_10_system_scores, top_precision_100_system_scores]\n",
+    "map_with_depth_scores = [map_with_depth_100_system_scores]\n",
     "\n",
     "print(\"The correlation coefficient indicates the strength and direction of the linear relationship between precision@10 and MAP values.\")\n",
     "print(\"A value close to 1 suggests a strong positive correlation, while a value close to -1 suggests a strong negative correlation.\")\n",
     "print(\"A value close to 0 indicates a weak or no correlation between the two variables.\\n\\n\")\n",
     "\n",
-    "for i, top_precision_scores_arr in enumerate(top_precision_scores):\n",
-    "    top_precision = (i + 1) * 5 if (i + 1) < 3 else 20  # Adjust the calculation for top_precision\n",
-    "    for j, map_with_depth_scores_arr in enumerate(map_with_depth_scores):\n",
-    "        map_depth = (j + 1) * 5 if (j + 1) < 3 else 20  # Adjust the calculation for map_depth\n",
-    "        print(\"Top Precision: {}\".format(top_precision))\n",
-    "        print(\"Map Depth: {}\".format(map_depth))\n",
-    "        correlation_coefficient = np.corrcoef(top_precision_scores_arr, map_with_depth_scores_arr)[0, 1]\n",
-    "        print(\"Correlation Coefficient: {:.2f}\".format(correlation_coefficient))\n",
-    "        print(\"-----\")\n",
-    "    print(\"\\n\")\n"
+    "print(\"Top Precision: 10\")\n",
+    "print(\"Map Depth: 100\")\n",
+    "correlation_coefficient_p_10_ap_100 = np.corrcoef(top_precision_10_system_scores, map_with_depth_100_system_scores)[0, 1]\n",
+    "print(\"Correlation Coefficient: {:.2f}\".format(correlation_coefficient_p_10_ap_100))\n",
+    "print(\"-----\")\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "print(\"Top Precision: 10\")\n",
+    "print(\"Top Precision: 100\")\n",
+    "correlation_coefficient_p_10_p_100 = np.corrcoef(top_precision_10_system_scores, top_precision_100_system_scores)[0, 1]\n",
+    "print(\"Correlation Coefficient: {:.2f}\".format(correlation_coefficient_p_10_p_100))\n",
+    "print(\"-----\")\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "print(\"Map Depth: 100\")\n",
+    "print(\"Top Precision: 100\")\n",
+    "correlation_coefficient_ap_100_p_100 = np.corrcoef(map_with_depth_100_system_scores, top_precision_100_system_scores)[0, 1]\n",
+    "print(\"Correlation Coefficient: {:.2f}\".format(correlation_coefficient_ap_100_p_100))\n",
+    "print(\"-----\")\n",
+    "print(\"\\n\")\n"
    ]
   }
  ],
